--- a/lab3/lab3_bfix/makefile
+++ b/lab3/lab3_bfix/makefile
@@ -1,4 +1,5 @@
-bfix: bfix.o
-	gcc -o bfix bfix.o
+bfix: bfix.o diff.o
+	gcc -o bfix bfix.o diff.o
 bfix.o: bfix.c
-	gcc -c -o bfix.o bfix.c 	
+	gcc -c -o bfix.o bfix.c
+	gcc -c -o diff.o diff.c
