--- a/lab5/ahalan/Makefile
+++ b/lab5/ahalan/Makefile
@@ -8,15 +8,14 @@
 
 all: ahalan
 
-ahalan: start.o main.o ahalan.o puts.o write.o length.o
+ahalan: start.o main.o ahalan.o puts.o length.o write.o
 	ld -melf_i386 -g -o $@ $^
 
 ahalan.o: ahalan.asm
 start.o: start.asm
 main.o: main.c
-write.o: write.asm
 puts.o: puts.c
 length.o: length.c
-
+write.o: write.asm
 clean:
 	rm *.o ahalan
